--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title> Cursos de Html </title>
     </head>
     <body>
-        <h1>Cursos de Html e bucetas</h1>
+        <h1>Cursos de Html e CSS</h1>
         <a href="/produtos/carros.html">Carros</a>
         <a href="/produtos/bicicletas.html">Bicicletas</a>
 
